修改插件发布相关信息

--- a/StockTickerExtension/Resources/ReleaseNotes.html
+++ b/StockTickerExtension/Resources/ReleaseNotes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Release Notes – Stock Tool Window v1.0.0</title>
+    <title>StockWatcher v1.0.0</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -27,16 +27,13 @@
     </style>
 </head>
 <body>
-    <h1>Release Notes – Version 1.0.0</h1>
+    <h1>StockWatcher – Version 1.0.0</h1>
 
-    <h2>Initial Release – Stock Tool Window</h2>
-
-    <h2>Features:</h2>
+    <h1>Features:</h1>
     <ul>
         <li>Display real-time stock prices, change percentages, and P/L information directly in the Visual Studio status bar.</li>
         <li>Support customizable refresh intervals; information updates dynamically without switching windows.</li>
         <li>Red for gains, green for losses, providing an intuitive view of market trends.</li>
-        <li>Monitor multiple stocks simultaneously.</li>
         <li>Automatically clears status bar information when the tool window is closed, keeping the interface clean.</li>
     </ul>
 
